--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "tadako.js",
-  "module": "index.ts",
+  "name": "tadako",
+  "version": "1.0.0",
+  "description": "An unofficial AnimeWorld API",
+  "keywords": ["anime", "data", "information", "api", "scraping"],
+  "author": "Stefan Cucoranu <elpideus@gmail.com>",
+  "license": "GPLv3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elpideus/Tadako.git"
+  },
+  "main": "index.ts",
   "type": "module",
-  "scripts": {
-    "start": "bun index.ts"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0"
-  }
+  },
+  "files": [
+    "index.ts",
+    "src",
+    "Tadako.ts",
+    "LICENSE",
+    "tsconfig.json",
+    "README.md"
+  ]
 }
