--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
-    "esbuild": "^0.24.2",
-    "ts-node": "^10.9.2"
+    "esbuild": "^0.24.2"
   },
   "files": [
     "index.ts",
